--- a/frontend/src/app/details/details-tab/details-tab.html
+++ b/frontend/src/app/details/details-tab/details-tab.html
@@ -16,7 +16,7 @@
                         </th>
                     } @else if (tab_type() === "differences") {
                         <th id="differences">
-                            <h3>DIFFERENCES</h3>
+                            <h3>ECARTS</h3>
                         </th>
                     }
                     <th id="january">Janvier</th>
