--- a/frontend/src/app/transactions/trans-add-bar.component/trans-add-bar.component.html
+++ b/frontend/src/app/transactions/trans-add-bar.component/trans-add-bar.component.html
@@ -30,7 +30,7 @@
                 inputId="motive"
                 />
             </p-iconfield>
-            <label for="motive">Motive</label>
+            <label for="motive">Motif</label>
         </p-floatLabel>
 
         <p-floatLabel variant="on">
@@ -42,7 +42,7 @@
                 inputId="to"
                 />
             </p-iconfield>
-            <label for="to">Destinataire</label>
+            <label for="to">À/De</label>
         </p-floatLabel>
 
         <p-floatLabel variant="on">
